--- a/composer.json
+++ b/composer.json
@@ -17,12 +17,13 @@
     ],
     "require": {
         "php": "^8.4",
-        "spatie/laravel-package-tools": "^1.16",
-        "illuminate/contracts": "^10.0||^11.0||^12.0",
         "ext-curl": "*",
         "ext-json": "*",
+        "guzzlehttp/guzzle": "7.x",
+        "illuminate/contracts": "^10.0||^11.0||^12.0",
         "league/oauth2-client": "^2",
-        "guzzlehttp/guzzle": "7.x"
+        "spatie/laravel-data": "^4.15",
+        "spatie/laravel-package-tools": "^1.16"
     },
     "require-dev": {
         "laravel/pint": "^1.14",
